# TorBridgesUpdater

./: BUILD-PREPARE.md  Cargo.toml  DEPLOY.md  README.md  TRANSLATING.md  build.rs  tor_notice.txt
deploy/linux/: com.yakovlevegor.TorBridgesUpdater.desktop.template  deploy.bash  install_script  uninstall_script
deploy/macos/: deploy.bash
deploy/macos/app_template/Contents/: Info.plist
deploy/macos/app_template/Contents/MacOS/: runner_script.sh
deploy/macos/app_template/Contents/Resources/: icon.icns
deploy/windows/: deploy.bash  install_script  uninstall_script
src/: main.rs
src/appsettings/: imp.rs  mod.rs
src/locale/: mod.rs
src/locale/lang/: locale_us.rs
