[package]
name = "tor_bridges_updater"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
ProductName = "Tor Bridges Updater"
FileDescription = "Update Tor bridges on a schedule" 
ProductVersion = "0.1.0"
OriginalFilename = "TorBridgesUpdater.exe"
LegalCopyright = "Copyright ©"

[dependencies]
gtk4 = "0.4.8"
once_cell = "1.2.0"

dirs = "4.0.0"
json = "0.12.4"
reqwest = { version = "0.11.10", features = ["blocking", "socks"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5.5"
base64 = "0.13.0"
chrono = "0.4"
sys-locale = "0.2.1"

#My own fork of https://github.com/Nilstrieb/winres (safer)
[target.'cfg(windows)'.build-dependencies]
winres = { git = "https://github.com/yakovlevegor/winres" }
