[package]
name = "tor_bridges_updater"
version = "0.1.3"
edition = "2021"
build = "build.rs"

[package.metadata.winresource]
ProductName = "Tor Bridges Updater"
FileDescription = "Update Tor bridges on a schedule" 
ProductVersion = "0.1.3"
OriginalFilename = "TorBridgesUpdater.exe"
LegalCopyright = "Copyright ©"

[dependencies]
gtk4 = "0.6.4"
once_cell = "1.17.1"

dirs = "5.0.0"
json = "0.12.4"
reqwest = { version = "0.11.16", features = ["blocking", "socks"] }
tokio = { version = "1", features = ["full"] }
regex = "1.7.3"
base64 = "0.21.0"
chrono = "0.4.24"
sys-locale = "0.3.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.15"
