[package]
name = "tor_bridges_updater"
version = "0.1.4"
edition = "2021"
build = "build.rs"

[package.metadata.winresource]
ProductName = "Tor Bridges Updater"
FileDescription = "Update Tor bridges on a schedule" 
ProductVersion = "0.1.4"
OriginalFilename = "TorBridgesUpdater.exe"
LegalCopyright = "Copyright ©"

[dependencies]
gtk4 = "0.7.2"
once_cell = "1.18.0"

dirs = "5.0.1"
json = "0.12.4"
reqwest = { version = "0.11.20", features = ["blocking", "socks"] }
tokio = { version = "1", features = ["full"] }
regex = "1.9.5"
base64 = "0.21.3"
chrono = "0.4.28"
sys-locale = "0.3.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"
